<resources>
    <string name="app_name">Wallpaper HD</string>
    <string name="save">Save</string>
    <string name="share">Share</string>
    <string name="rotate">Rotate</string>
    <string name="splashText">
WalliHD</string>
    <string name="WallpaperText"><i>WallPaperHD</i></string>


    <string name="set_home">Set to home screen</string>
    <string name="set_lock">Set to lock</string>
    <string name="set_share">Share</string>
    <string name="download">Download</string>
    <string name="close">Close</string>


    <string name="nav_open">Open</string>
    <string name="nav_close">Close</string>
    <string name="set_wallpaper">Set Wallpaper</string>
    <string name="search">Search</string>
    <string name="wallpaper_hd">WallPaper HD</string>
    <string name="category">CATEGORY</string>
    <string name="feature">Featured</string>
    <string name="popular_collection">Popular Collection</string>

</resources>