<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <RelativeLayout
        android:id="@+id/group_set_home"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/img_home"
            style="@style/imageIcon"
            android:src="@drawable/ic_baseline_home_24" />

        <TextView
            style="@style/textviewBottom"
            android:layout_toEndOf="@+id/img_home"
            android:text="@string/set_home" />

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_marginRight="@dimen/dp_20"
        android:layout_marginLeft="@dimen/dp_20"
        android:layout_height="@dimen/dp_1"
        android:background="@color/black" />

    <RelativeLayout
        android:id="@+id/group_set_lock"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/img_lock"
            style="@style/imageIcon"
            android:src="@drawable/ic_baseline_screen_lock_portrait_24" />

        <TextView
            style="@style/textviewBottom"
            android:layout_toEndOf="@+id/img_lock"
            android:text="@string/set_lock" />

    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_marginRight="@dimen/dp_20"
        android:layout_marginLeft="@dimen/dp_20"
        android:layout_height="@dimen/dp_1"
        android:background="@color/black" />

    <RelativeLayout
        android:id="@+id/group_share"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/img_share"
            style="@style/imageIcon"
            android:src="@drawable/ic_baseline_share_24" />

        <TextView
            style="@style/textviewBottom"
            android:layout_toEndOf="@+id/img_share"
            android:text="@string/share" />

    </RelativeLayout>

    <View
        android:layout_marginRight="@dimen/dp_20"
        android:layout_marginLeft="@dimen/dp_20"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_1"
        android:background="@color/black" />

    <RelativeLayout
        android:id="@+id/group_set_download"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/img_download"
            style="@style/imageIcon"
            android:src="@drawable/ic_baseline_arrow_downward_24" />

        <TextView
            style="@style/textviewBottom"
            android:layout_toEndOf="@+id/img_download"
            android:text="@string/download" />

    </RelativeLayout>

    <View
        android:layout_marginRight="@dimen/dp_20"
        android:layout_marginLeft="@dimen/dp_20"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_1"
        android:background="@color/black" />

    <RelativeLayout
        android:id="@+id/group_close"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/img_close"
            style="@style/imageIcon"
            android:src="@drawable/ic_baseline_close_24" />

        <TextView
            style="@style/textviewBottom"
            android:layout_toEndOf="@+id/img_close"
            android:text="@string/close" />

    </RelativeLayout>

</LinearLayout>